--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ body {
   box-shadow: none;
   cursor: pointer;
 
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
